PyMaker/datas/object2/RawHTML/i3101/Python_DOC_referPages.why-isnt-python-specific-about-what-the-invalid-syntax-is.txt
<div class="post-text" itemprop="text">
<p>Lets say I have this piece of code:</p>
<pre><code>&gt;&gt;&gt; for x in range(10)
File "&lt;stdin&gt;", line 1
for x in range(10)
                 ^
SyntaxError: invalid syntax
</code></pre>
<p>Python points at where the invalid syntax is, but doesn't tell me what is it that I am missing. Note that this question is not about what I am missing. <strong>I do know</strong> that there is a <code>:</code> that I am missing at the end of the range() function. I am asking why Python isn't specific about the missing <code>:</code>. Is there anything else that can come after the range() function in terms of syntax?</p>
</div>
<div class="post-text" itemprop="text">
<p>According to the <a href="https://docs.python.org/3/reference/compound_stmts.html#for" rel="nofollow noreferrer">Python documentation</a>:</p>
<blockquote>
<p>The for statement is used to iterate over the elements of a sequence (such as a string, tuple or list) or other iterable object:</p>
</blockquote>
<pre><code>for_stmt ::=  "for" target_list "in" expression_list ":" suite
          ["else" ":" suite]
</code></pre>
<p>Then, after the <code>in</code> you can put any iterable. Specifically answering your question, after the <code>range()</code>, you can put a comma and pass any object, or you could also keep passing as many objets as you want separated by commas.</p>
</div>
<span class="comment-copy">@Marcus.Aurelianus , this person is conscious about what the error is... he clearly says in his question</span>
<span class="comment-copy">what if you want <code>for x in range(10), range(12):</code>?</span>
<span class="comment-copy">@Marcus.Aurelianus My question isn't about what I am missing. It is about why Python chooses not to pin point it.</span>
<span class="comment-copy">@BearBrown That makes sense. I think that's all I needed! Thanks!</span>
<span class="comment-copy">could also be part of a comprehension statement, like <code>(x for x in range(10))</code></span>
